--- a/src/components/MoviesTrail/styles.css
+++ b/src/components/MoviesTrail/styles.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     place-items: center;
+    align-items: baseline;
 }
 
 @media screen and (max-width: 360px) {
