--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@
     body {
         font-family: 'Nunito Sans', sans-serif;
         @apply text-[14px];
-        @apply bg-gray-900 text-gray-300;
+        @apply bg-gray-900 text-gray-300 relative;
     }
 }
